# freewindows

./: .gitignore  BUILD_SUCCESS.md  CHANGELOG.md  CMakeLists_Qt.txt  COMPATIBILITY_GUARANTEE.md  COMPREHENSIVE_STATUS.md  DEMO_RUNNING.md  FINAL_SUMMARY.md  LICENSE-COMPOSITE.md  LICENSE-MULAN.md  NEW_DESIGN.md  NEXT_STEPS.md  PROGRESS.md  PROJECT_COMPLETE.md  PROJECT_SUCCESS_SUMMARY.md  QT_SUBSYSTEM_README.md  QUICK_REFERENCE.md  QUICK_START_NOW.md  README.md  STAGE5_COMPLETE.md  STAGE6_COMPLETE.md  STAGE6_IN_PROGRESS.md  SUCCESS.md  UI_MIGRATION_READY.md  conanfile.py  conanfile.txt  modern-ui-implementation-guide.md  tool-performance.json
cmake/linker/: lld-link-config.cmake  (+1 more)
demos/Material3Demo/: CMakeLists.txt  README.md  main.cpp  modernwindow.cpp  modernwindow.h
docs/: INTEGRATION_SUMMARY.md  PROJECT_STRUCTURE.md  REACTOS_FILE_MAPPING.md  WINE_FILE_MAPPING.md  alternative-languages-analysis.md  build-analysis.md  build-success-summary.md  build-system-analysis.md  build-system-comparison.md  c-plus-c3-analysis.md  c23-features.md  cbuild-ng-analysis.md  compatibility-impact-analysis.md  conan-package-management.md  desktop-environment-architecture.md  feasibility-analysis.md  fixes-applied.md  freewindows-vs-reactos.md  getting-started.md  graphics-improvement-options.md  graphics-stack-comparison.md  java-jeandle-c3-analysis.md  linker-configuration.md  llvm-migration-log.md  material3-expressive-design.md  meson-feasibility-analysis.md  migration-notes.md  mixed-language-strategy.md  mlir-pocl-integration.md  modern-titlebar-design.md  performance-optimization.md  qt-material3-quick-start.md  qt-vs-vulkan-analysis.md  qt-vulkan-feasibility-analysis.md  qt-vulkan-installation-guide.md  qt-vulkan-migration-plan.md  quick-start-optimized.md  reactos-ui-modernization-plan.md  stage5-completion-summary.md  stage6-progress.md  (+7 more)
patches/: 0001-fix-widl-format-string.patch  0002-disable-pragma-pack-warning.patch  0003-fix-all-uuid-format-strings.patch  README.md
scripts/: analyze-build-status.ps1  apply-llvm-fixes.ps1  apply-patches.ps1  benchmark-build.ps1  build-full-system.ps1  build-material3-demo.ps1  build-optimized.ps1  build-reactos-incremental.ps1  build-with-conan.ps1  build.ps1  check-environment.ps1  check-qt-vulkan-environment.ps1  compare-compilers.ps1  configure-optimized.ps1  configure-qt-subsystem.ps1  configure-reactos.ps1  configure.ps1  copy-reactos-organized.ps1  copy-wine-organized.ps1  create-material3-demo.ps1  enable-lto.ps1  fix-all-widl-issues.ps1  run-demo.ps1  run-material3-demo.ps1  setup-reactos-source.ps1  test-full-link.ps1  test-tool-performance.ps1  test.ps1
src/explorer/: CMakeLists.txt
src/qt_framework/: CMakeLists.txt
tests/: CMakeLists.txt
(+20750 files in other folders)
