# Tests for ReactOS Qt Subsystem

# Placeholder - tests will be implemented alongside components
message(STATUS "Tests will be implemented alongside each component")

# Example test structure:
# add_executable(test_modernwindow
#     test_modernwindow.cpp
# )
# 
# target_link_libraries(test_modernwindow
#     PRIVATE
#         Qt6::Test
#         ReactOSFramework
# )
# 
# add_test(NAME test_modernwindow COMMAND test_modernwindow)
