# Qt Explorer - Modern file manager for ReactOS

# Placeholder - will be implemented in task 5
# add_executable(qtexplorer
#     main.cpp
#     qtexplorer.cpp
#     qtexplorer.h
# )
# 
# target_link_libraries(qtexplorer
#     PRIVATE
#         Qt6::Core
#         Qt6::Gui
#         Qt6::Widgets
#         ReactOSFramework
# )
# 
# install(TARGETS qtexplorer
#     RUNTIME DESTINATION bin
# )

message(STATUS "Qt Explorer will be implemented in task 5")
